Fix styling on mobile

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -288,6 +288,9 @@ img {
 	border:  2px solid #27ae60;
 	background-color: #fff;
 }
+.jumbotron .banner p {
+	margin: 15px 0;
+}
 
 @media (max-width: 767px) { /* for xs devices */
 	.jumbotron {
@@ -295,6 +298,9 @@ img {
 	}
 	.jumbotron .apps > .buttons {
 		text-align: center;
+	}
+	.jumbotron .banner {
+		margin: 20px 5px;
 	}
 }
 @media (min-width: 768px) and (max-width: 991px) { /* for sm devices */
